--- a/DaconContest02/2. RandomSearchCV.ipynb
+++ b/DaconContest02/2. RandomSearchCV.ipynb
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# RobustScaler"
+    "# StandardScaler, RobustScaler"
    ]
   },
   {
@@ -178,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from sklearn.preprocessing import RobustScaler\n",
+    "# from sklearn.preprocessing import RobustScaler, StandardScaler\n",
     "\n",
     "# scaler1 = RobustScaler()\n",
     "# scaler1.fit(x_train)\n",
@@ -285,8 +285,9 @@
    "outputs": [],
    "source": [
     "kfold_cv = KFold(n_splits=5, shuffle=True)\n",
-    "parameters =  {\"n_estimators\": [100,300,500], \"max_depth\":[4,8], \\\n",
-    "                \"lr\":[0.01,0.06,0.12]}\n",
+    "parameters =  {\"n_estimators\": [200,400,600,800], \"max_depth\":[7,9,11], \\\n",
+    "                \"lr\":[0.01,0.04,0.07,0.10], \"feature_fraction\":[0.6,0.9], \\\n",
+    "                 \"num_iterations\":[500,800]}\n",
     "\n",
     "clf2= XGBClassifier()\n",
     "n_iter_search = 20\n",
@@ -312,7 +313,7 @@
     "#model2 = XGBClassifier()\n",
     "\n",
     "eval_set = [(x_test, y_test)]\n",
-    "model2.fit(x_train, y_train, eval_metric=\"mlogloss\", eval_set=eval_set, verbose=True,early_stopping_rounds=25)\n",
+    "model2.fit(x_train, y_train, eval_metric=\"mlogloss\", eval_set=eval_set, verbose=True,early_stopping_rounds=50)\n",
     "\n",
     "res=model2.score(x_test,y_test) \n",
     "print(res)\n",
@@ -388,8 +389,9 @@
    "outputs": [],
    "source": [
     "kfold_cv = KFold(n_splits=5, shuffle=True)\n",
-    "parameters =  {\"n_estimators\": [100,300,500], \"max_depth\":[4,8], \\\n",
-    "                \"lr\":[0.01,0.04,0.08,0.12]}\n",
+    "parameters =  {\"n_estimators\": [200,400,600,800], \"max_depth\":[7,9,11], \\\n",
+    "                \"lr\":[0.01,0.04,0.07,0.10], \"feature_fraction\":[0.6,0.9], \\\n",
+    "                 \"num_iterations\":[500,800]}\n",
     "\n",
     "clf3= LGBMClassifier()\n",
     "n_iter_search = 20\n",
