--- a/DaconContest02/6 Test(NewData).ipynb
+++ b/DaconContest02/6 Test(NewData).ipynb
@@ -108,7 +108,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, train_size=0.8, shuffle=True ,random_state=0)"
+    "x_train, x_test, y_train, y_test = train_test_split(x,y,stratify=y, train_size=0.8, shuffle=True ,random_state=0)"
    ]
   },
   {
