--- a/Part7 Django/2 Django/200213_Django.md
+++ b/Part7 Django/2 Django/200213_Django.md
@@ -2,6 +2,11 @@
 
 
 
+**가상환경 구동!**
+django_env/Scripts/activate
+
+
+
 models.py를 수정하고 하면 **반드시** 다음을 실행한다.
 python manage.py makemigrations
 python manage.py migrate 
@@ -64,7 +69,7 @@ cd django_mldl
 cd site_2
 ```
 
-가상환경 구동!
+**가상환경 구동!**
 
 
 
@@ -201,4 +206,226 @@ app_name='polls' 추가
 **url reversing(?)**
 
 
+
+#### 투표 (Question) 상세 페이지에서 투표를 하기 위한 Form 만들기
+
+polls\detail.html 파일 수정
+
+```html
+<h2>{{question.question_text }}</h2>
+
+{% if error_message %}
+ <p><strong>{{ error_message }}</strong></p>
+{% endif %}
+
+<!-- <form action="/polls/{{question.id}}/vote/" method='post'> -->
+<form action="{% url 'polls:vote' question.id %}" method="post">
+ {% csrf_token %}
+ {% for choice in question.choice_set.all %}
+  <input type="radio" name="choice_select" id="choice{{ forloop.counter }}" value="{{choice.id}}">
+  <label for="choice{{ forloop.counter }}">{{choice.choice_text}}</label>
+  <br>
+ {% endfor %}
+ <input type="submit" value="Vote">
+</form>
+```
+
+
+
+#### 투표 (Question) 상세 페이지에서 투표를 마쳤을 때 (form 이 제출되었을 때 해당 POST 요청을 처리해줄 vote 함수 수정하기
+
+polls --> views.py 파일 수정
+
+```python
+def vote(request,question_id):
+    print(request)
+    return HttpResponse("You're voting on question {}.".format(question_id))
+
+>>> <WSGIRequest: POST '/polls/3/vote/'>
+```
+
+77번 슬라이드 참고!! 
+
+
+
+```python
+def vote(request,question_id):
+    question=get_object_or_404(Question, pk=question_id)
+    select_choice = question.choice_set.get(pk= request.POST['choice_select'])
+
+    select_choice.votes += 1
+    select_choice.save()
+
+    return redirect('polls:result', question_id=question.id)
+```
+
+
+
+개발자 도구에서 마케팅 b 태그로 가면
+
+```html
+<input type="radio" name="choice_select" id="choice2" value="10">
+```
+
+value를 임의로 조작할 수 있기 때문에 ? 대비를 해야 한다.
+
+```
+try:
+except:
+else:
+finally:
+
+error가 없으면 try, else, finally 실행
+error가 있으면 except, finally 실행
+```
+
+
+
+views.py
+
+```python
+def result(request, question_id):
+    question = get_object_or_404( Question, pk=question_id)
+```
+
+
+
+polls 폴더에 result.html 파일 생성 및 작성
+
+```html
+<h1> {{question.question_text}}</h1>
+<ul>
+  {% for choice in question.choice_set.all %}
+  <li> {{ choice.choice_text}} got voted for {{ choice.votes }} times.</li>
+  {% endfor %}
+</ul>
+
+<a href="{% url 'polls:detail' question.id %}">Vote again?></a>
+```
+
+
+
+#### Admin 페이지 관리하기
+
+슬라이드 page 86부터 그림 참고 유용!
+
+
+
+admin.py 
+
+
+
+```python
+class QuestionAdmin(admin.ModelAdmin):
+    #fields=['pub_date', 'question_text']
+    fields=[ 'question_text','pub_date']
+# fields의 입력 순서에 따라 순서가 결정 됨
+    
+admin.site.register(Question, QuestionAdmin)
+admin.site.register(Choice)
+```
+
+
+
+Question 추가 페이지에서 Choice 까지 한번에 추가할 수 있도록 수정하기와 Choice 추가를 위한 Inline 영역이 너무 길어지지 않도록 간결하게 수정 TabularInline 활용
+
+```python
+from django.contrib import admin
+from .models import Question, Choice
+
+# Register your models here.
+# class ChoiceInline(admin.StackedInline):
+class ChoiceInline(admin.TabularInline):
+    model = Choice
+    extra = 2
+
+class QuestionAdmin(admin.ModelAdmin):
+    #fields=['pub_date', 'question_text']
+    #fields=[ 'question_text','pub_date']
+    #순서 결정
+
+    fieldsets= [
+        ('Question title', {'fields':['question_text']}),
+        ('Date Information', {'fields':['pub_date']}),
+    ]
+
+    inlines = [ChoiceInline]
+
+admin.site.register(Question, QuestionAdmin)
+admin.site.register(Choice)
+```
+
+
+
+중요하지 않은 항목을 감추기 collapse class 적용
+
+```python
+class QuestionAdmin(admin.ModelAdmin):
+    #fields=['pub_date', 'question_text']
+    #fields=[ 'question_text','pub_date']
+    #순서 결정
+
+    fieldsets= [
+        ('Question title', {'fields':['question_text']}),
+        ('Date Information', {'fields':['pub_date'], 'classes':['collapse'] }),
+    ]
+
+    inlines = [ChoiceInline]
+```
+
+
+
+생성한 Question 리스트 페이지에서 question_text 이외의 정보들을 추가로 출력 해주기
+
+```python
+list_display = ('question_text', 'pub_date', 'was_published_recently')
+```
+
+
+
+생성한 Question 리스트 페이지에서 'was_published_recently' 항목을 아이콘으로 변경 하 고 정렬 기능 부여하기
+
+- site_2\polls\models.py 파일 수정하기
+
+```python
+class Question (models.Model): # DB Table for 설문조사 주제
+    question_text = models.CharField(max_length=200) # 설문조사 주제 텍스트
+    pub_date = models. DateTimeField('date published') # ‘date published’ : 관리자 페이지에서 보여질 항목명
+
+    def __str__(self):
+        return self.question_text
+
+    def was_published_recently(self):
+        now = timezone.now()
+        return now >= self.pub_date >= now - datetime.timedelta(days=1)
+
+    was_published_recently. boolean = True
+    was_published_recently. admin_order_field = 'pub_date'
+    was_published_recently. short_description = 'Published recently?'
+```
+
+
+
+생성한 Question 리스트 페이지에서 필터 & 검색 기능 추가하기
+
+admin.py 수정
+
+```python
+class QuestionAdmin(admin.ModelAdmin):
+    #fields=['pub_date', 'question_text']
+    #fields=[ 'question_text','pub_date']
+    #순서 결정
+
+    fieldsets= [
+        ('Question title', {'fields':['question_text']}),
+        ('Date Information', {'fields':['pub_date'], 'classes':['collapse'] }),
+    ]
+
+    inlines = [ChoiceInline]
+
+    list_display = ('question_text', 'pub_date', 'was_published_recently')
+    list_filter = ['pub_date'] # pub_ 설문조사 생성 시간 을 기준으로 필터 기능 추가
+    search_fields = ['question_text'] # question_ 설문조사 주제 를 기준으로 검색 기능 추가
+
+```
 
