--- a/FinalProject/Code/Zip_File.ipynb
+++ b/FinalProject/Code/Zip_File.ipynb
@@ -9,7 +9,8 @@
     "import glob\n",
     "import os\n",
     "import zipfile\n",
-    "import os.path"
+    "import os.path\n",
+    "import shutil"
    ]
   },
   {
@@ -81,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=[ 8,9,10]"
+    "test=[ 6,7,8, 15,16,17]"
    ]
   },
   {
