--- a/FinalProject/Code/Zip_File.ipynb
+++ b/FinalProject/Code/Zip_File.ipynb
@@ -59,12 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sname=['S001','S002','S003','S004','S005','S006']\n",
+    "sname=['S001','S002','S003','S005','S006']\n",
     "\n",
-    "Lname=[]\n",
-    "for i in range(1, 31):\n",
-    "    tmp='L'+str(i)\n",
-    "    Lname.append(tmp)\n",
+    "#Lname=['L1','L2','L3','L4','L8','L9','L12','L13','L19','L20','L22','L23','L25','L26']\n",
+    "\n",
+    "Lname=['L1','L2','L3','L4','L8','L12','L22']\n",
+    "\n",
+    "\n",
+    "#for i in range(1, 31):\n",
+    "#   tmp='L'+str(i)\n",
+    "#    Lname.append(tmp)\n",
     "    \n",
     "ename=['E01','E02','E03']"
    ]
